# dio-bank

./: .gitignore  pyproject.toml  render-deploy.sh  test_import.py
src/: app.py  apple.py  db.py  utils.py  wsgi.py
src/controllers/: __init__.py  auth.py  post.py  role.py  user.py
src/instance/: blog.sqlite  diobank.sqlite
src/migrations/versions/: 22d23d4bf701_add_password_field.py  910aaa949a6e_initial_migration.py
tests/integration/: confitest.py
tests/integration/controllers/: test_user.py
tests/unit/: test_utils.py
